update openapi-client
